clusters/cluster/utilities/bbot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bbot
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bbot
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        app: bbot
    spec:
      containers:
      - name: bbot
        image: blacklanternsecurity/bbot
        imagePullPolicy: IfNotPresent
        command: [ "sleep" ]
        args: [ "infinity" ]
