clusters/cluster/utilities/webdav.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdav
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webdav
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        app: webdav
    spec:
      containers:
      - name: webdav
        image: bytemark/webdav
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
         - name: uploads-nfs
           mountPath: /var/lib/dav/data/
      volumes:
       - name: uploads-nfs
         persistentVolumeClaim:
           claimName: uploads-pvc
---
---
apiVersion: v1
kind: Service
metadata:
  name: webdav
  namespace: default
  labels:
    app: webdav
spec:
  selector:
    app: webdav
  ports:
  - name: webdav
    port: 80
    targetPort: 80
  type: ClusterIP
