clusters/cluster/utilities/bloodhoundce.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-db
  namespace: bloodhound
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: bloodhound-service
  namespace: bloodhound
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: bloodhound
---
apiVersion: v1
kind: Service
metadata:
  name: graph-db
  namespace: bloodhound
spec:
  selector:
    app: graphdb
  ports:
    - name: graphdb
      protocol: TCP
      port: 7687
      targetPort: 7687
    - name: http
      protocol: TCP
      port: 7474
      targetPort: 7474
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: bloodhound
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: docker.io/library/postgres:13.2
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
        ports:
        - containerPort: 5432
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - bloodhound
            - -d
            - bloodhound
            - -h
            - 127.0.0.1
            - -p
            - "5432"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        volumeMounts:
        - name: bloodhound-postgres-config
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: bloodhound-postgres-config
        persistentVolumeClaim:
          claimName: bloodhound-postgres-config-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bloodhound
  namespace: bloodhound
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bloodhound
  template:
    metadata:
      labels:
        app: bloodhound
    spec:
      containers:
      - name: bloodhound
        image: docker.io/specterops/bloodhound:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: bloodhound-config
          mountPath: /bloodhound.config.json
          subPath: bloodhound.config.json
      volumes:
      - name: bloodhound-config
        configMap:
          name: bloodhound-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphdb
  namespace: bloodhound
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphdb
  template:
    metadata:
      labels:
        app: graphdb
    spec:
      containers:
      - name: neo4j
        image: docker.io/library/neo4j:4.4
        ports:
        - containerPort: 7687
        - containerPort: 7474
        livenessProbe:
          exec:
            command:
            - wget
            - -O
            - /dev/null
            - -q
            - http://127.0.0.1:7474
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bloodhound-ingress
  namespace: bloodhound
spec:
  rules:
  - host: bloodhound.tallflix.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bloodhound-service
            port:
              number: 8080
  ingressClassName: internal-nginx
  #tls:
  #- hosts:
  #  - "bloodhound.tallflix.ca"
  #  secretName: tls-secret
---
apiVersion: v1
kind: Namespace
metadata:
  name: bloodhound
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade
    "helm.sh/hook-weight": "-5" # ensures this is executed first
    "helm.sh/hook-delete-policy": before-hook-creation
