clusters/cluster/utilities/reNgine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rengine
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rengine
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        app: rengine
    spec:
      containers:
      - name: rengine
        image: trithemius/rengine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 443
        command: [ "sleep" ]
        args: [ "infinity" ]
---
apiVersion: v1
kind: Service
metadata:
  name: rengine
  namespace: default
  labels:
    app: rengine
spec:
  selector:
    app: rengine
  ports:
  - name: rengine
    port: 443
    targetPort: 443
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rengine-ingress
  namespace: default
spec:
  ingressClassName: internal-nginx
  #tls:
  #- hosts:
  #  - "appdaemon.tallflix.ca"
  #  secretName: tls-secret
  rules:
  - host: rengine.tallflix.ca
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rengine
            port:
              number: 443
